# eth-blockies-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  eth_blockies_rs_example_blockies_generator_wasm.js  eth_blockies_rs_example_blockies_generator_wasm_bg.wasm  index.html  style.css
benches/: bench.rs
examples/blockies-generator-wasm-example/: Cargo.toml  build-and-run-local.sh  deploy-gh-pages-to-remote.sh
examples/blockies-generator-wasm-example/gh-pages/: index.html  style.css
examples/blockies-generator-wasm-example/src/: const_generic_call_mapper.rs  lib.rs
examples/blockies-generator-wasm-example/src/wasm-runner/: index.html  style.css
examples/wasm-example/: Cargo.toml  build-and-run-local.sh  build.sh  copy-to-gh-pages.sh  deploy-gh-pages.sh  run-deploy-local.sh  run-local.sh
examples/wasm-example/gh-pages/: eth_blockies_rs_example_blockies_generator_wasm.js  eth_blockies_rs_example_blockies_generator_wasm_bg.wasm  ethereum_blockies_generator_wasm.js  ethereum_blockies_generator_wasm_bg.wasm  index.html  style.css
examples/wasm-example/src/: lib.rs
examples/wasm-example/src/wasm-runner/: index.html  style.css
scripts/: gen-doc.sh  test-algo.sh
src/: blockies_generator.rs  colorclass.rs  eth_wallet_addr.rs  indexed_png.rs  lib.rs  main.rs
src/data_encoder/: indexed_png.rs  mod.rs
src/lib/: blockies_generator.rs  compat.rs  lib.rs
src/lib/blockies/: blockies_base.rs  key_generator.rs  mod.rs
src/lib/data_encoder/: ansi_seq.rs  indexed_png.rs  mod.rs
src/lib/global_type_helper/: mod.rs  palette.rs  seed_input.rs
src/lib/type_helper/: blockies.rs  mod.rs  palette.rs  seed_input.rs
src/type_helper/: eth_addr.rs  eth_blockies_data.rs  mod.rs
tests/: test-list.rs
tests/algorithm_validation/: README.md  catimg-output-to-testcase.rs  gen-rand-testcase-after-check.sh  mod.rs
