[package]
name = "eth-blockies"
version = "0.9.2"
authors = [ "Kim Hwiwon <kim.hwiwon@outlook.com>" ]
edition = "2021"
description = "A lightweight library to get Ethereum blockies raw data, which can be used for creating blockies icon images, printing to terminal, etc."
repository = "https://github.com/snoopy3476/eth-blockies-rs.git"
license = "MIT"
keywords = [ "ethereum", "blockies", "icon" ]
categories = [ "cryptography::cryptocurrencies",
               "multimedia::images",
               "encoding",
               "no-std",
               "wasm" ]

# for bencher

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "benches"
harness = false
path = "benches/bench.rs"
