[package]
name = "eth-blockies"
version = "1.0.0"
authors = [ "Kim Hwiwon <kim.hwiwon@outlook.com>" ]
edition = "2021"
description = "A pure Rust lightweight library/binary to get Ethereum blocky identicon raw data, which can be used for creating blockies icon images, printing to terminal, etc."
repository = "https://github.com/snoopy3476/eth-blockies-rs.git"
documentation = "https://docs.rs/eth-blockies/1.0.0/"
license = "MIT"
keywords = [ "ethereum", "blockies", "icon", "identicon" ]
categories = [ "cryptography::cryptocurrencies",
               "multimedia::images",
               "no-std",
               "wasm",
               "command-line-utilities" ]
rust-version = "1.56"
exclude = [ "asset", "benches", "examples" ]

[dependencies]
deflate = "1.0.0"

[lib]
path = "src/lib/lib.rs"

[[bin]]
name = "eth-blockies"
path = "src/bin/main.rs"

# for bencher

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "benches"
harness = false
path = "benches/bench.rs"
