[package]
name = "eth-blockies-rs-example-blockies-generator-wasm"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.81"
web-sys = { version = "0.3.4", features = [ 'Document', 'HtmlElement', 'HtmlInputElement', 'HtmlCollection', 'DomRect', 'DomTokenList', 'Window', 'console' ] }
eth-blockies = { path = "../.." }

[profile.release]
lto = true
opt-level = 's'
